feat: add the state array

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <input type="text" name="apt/suite" placeholder="Apt/Suite #">
                 <input type="text" name="city" placeholder="City*">
                 <select name="state" placeholder="State*">
-                    <option>LA</option>
+                    <option>AK</option>
                 </select>
                 <input type="tel" name="zipcode" placeholder="ZipCode*">
             </div>
