fix: time functionality adjusted

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <h2>WHEN WILL YOU LIKE US TO COME?</h2>
             <p>Choose the date and <b>arrival window*</b> that works for you. If you need a last-minute appointment give us a call at (206) 294-9654. *Please note: Your <b>arrival window</b>is the block of <b>time</b> in which the cleaners may <b>arrive.</b></p>
             <div class="date">
-                <input type="text" name="date" data-toggle="datepicker" placeholder="Click to Choose a Date">
-                <input type="text" name="time" data-toggle="timepicker" placeholder="--:--">
+                <input type="text" name="date" data-toggle="datepicker" class="datepicker" placeholder="Click to Choose a Date">
+                <select type="text" name="time" data-toggle="timepicker" class="timepicker" placeholder="--:--"></select>
             </div>
         </section>
 
@@ -252,7 +252,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/1.0.10/datepicker.min.js" integrity="sha512-RCgrAvvoLpP7KVgTkTctrUdv7C6t7Un3p1iaoPr1++3pybCyCsCZZN7QEHMZTcJTmcJ7jzexTO+eFpHk4OCFAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.14.0/jquery.timepicker.js" integrity="sha512-v84GNWs/NREzyztDm0s2NCXR9tIXH4aD/pe3uktyJeCWICr+/J38obdjXx1wxPRzTXHY54Hf0zBD5fbuRSNvGw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.payment/3.0.0/jquery.payment.min.js" integrity="sha512-vBu5d4hztWcpvKmp+qUS8afvWUMjTd59Z7ci0j6YnKu83yy6Xh/VxtgZqIteIFaK3gMYDm0AnOp3pEF4z6afMw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="main.js"></script>
 </body>
