fix: calculator functionality error

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700&display=swap" rel="stylesheet">
 
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/1.0.10/datepicker.min.css" integrity="sha512-YdYyWQf8AS4WSB0WWdc3FbQ3Ypdm0QCWD2k4hgfqbQbRCJBEgX0iAegkl2S1Evma5ImaVXLBeUkIlP6hQ1eYKQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.14.0/jquery.timepicker.css" integrity="sha512-WlaNl0+Upj44uL9cq9cgIWSobsjEOD1H7GK1Ny1gmwl43sO0QAUxVpvX2x+5iQz/C60J3+bM7V07aC/CNWt/Yw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Styles -->
@@ -70,8 +71,8 @@
                 </select>
                 <select name="dirty">
                     <option data-amount="0.00">Slightly Dirty</option>
-                    <option data-amount="40.00">Pretty Dirty</option>
-                    <option data-amount="60.00">Very Dirty</option>
+                    <option data-amount="20.00">Pretty Dirty</option>
+                    <option data-amount="40.00">Very Dirty</option>
                 </select>
             </div>
         </section>
@@ -211,7 +212,7 @@
             <div class="summary">
                 <h3>BOOKING SUMMARY</h3>
                 <div class="info">
-                    <b>H</b>
+                    <b><i class="fa-solid fa-house-chimney"></i></b>
                     <div class="info-inner">
                         <p><span class="bedrooms">1 Bedroom</span> <span class="bedrooms-value value">$95.00</span></p>
                         <ul>
@@ -223,7 +224,7 @@
                 </div>
                 <div class="info">
                     <b>D</b>
-                    <p>Choose Service date...</p>
+                    <p class="date-info">Choose Service date...</p>
                 </div>
                 <div class="info">
                     <p class="how-often-option">One Time</p>
@@ -232,7 +233,7 @@
                 <div class="total">
                     <p><span>SUBTOTAL</span> <span class="subtotal">$115.00</span></p>
                     <p><span>SALES TAX</span> <span class="tax">$15.39</span></p>
-                    <p><span>TOTAL</span><span class="total-overall">$164.75</span></p>
+                    <p><span>TOTAL</span><span class="total-overall">$130.39</span></p>
                 </div>
             </div>
         </aside>
