--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="summary">
                 <h3>BOOKING SUMMARY</h3>
                 <div class="info">
-                    <b><i class="fa-solid fa-house-chimney"></i></b>
+                    <b><svg xmlns="http://www.w3.org/2000/svg" width="34.88" height="27.758" viewBox="0 0 34.88 27.758"><defs><style>.a{fill:#c4c4c4;}</style></defs><path class="a" d="M30.462,16.615V27a1.4,1.4,0,0,1-1.385,1.385H20.769V20.077H15.231v8.308H6.923A1.4,1.4,0,0,1,5.538,27V16.615a.288.288,0,0,1,.011-.065.288.288,0,0,0,.011-.065L18,6.23,30.44,16.485a.3.3,0,0,1,.022.13Zm4.825-1.493-1.341,1.6a.734.734,0,0,1-.454.238h-.065a.666.666,0,0,1-.454-.151L18,4.327,3.029,16.81a.8.8,0,0,1-.519.151.734.734,0,0,1-.454-.238l-1.341-1.6a.7.7,0,0,1-.151-.508A.632.632,0,0,1,.8,14.149L16.356,1.19a2.682,2.682,0,0,1,3.288,0L24.923,5.6V1.385a.668.668,0,0,1,.693-.693H29.77a.668.668,0,0,1,.693.693v8.827L35.2,14.15a.629.629,0,0,1,.238.465.7.7,0,0,1-.151.508Z" transform="translate(-0.562 -0.627)"/></svg></b>
                     <div class="info-inner">
                         <p><span class="bedrooms">1 Bedroom</span> <span class="bedrooms-value value">$95.00</span></p>
                         <ul>
@@ -223,10 +223,11 @@
                     </div>
                 </div>
                 <div class="info">
-                    <b>D</b>
+                    <b><svg xmlns="http://www.w3.org/2000/svg" width="33.428" height="35.999" viewBox="0 0 33.428 35.999"><defs><style>.a{fill:#c4c4c4;}</style></defs><path class="a" d="M2.571,33.429H8.357V27.643H2.571Zm7.071,0h6.429V27.643H9.643v5.786ZM2.571,26.358H8.357V19.929H2.571Zm7.071,0h6.429V19.929H9.643v6.429ZM2.571,18.643H8.357V12.857H2.571ZM17.357,33.429h6.429V27.643H17.357ZM9.643,18.643h6.429V12.857H9.643ZM25.072,33.429h5.786V27.643H25.072Zm-7.714-7.071h6.429V19.929h-6.43v6.429ZM10.286,9V3.214a.652.652,0,0,0-.643-.643H8.357a.652.652,0,0,0-.643.643V9a.652.652,0,0,0,.643.643H9.643A.652.652,0,0,0,10.286,9ZM25.072,26.357h5.786V19.929H25.072v6.429Zm-7.715-7.714h6.429V12.857H17.357Zm7.714,0h5.786V12.857H25.071ZM25.714,9V3.214a.652.652,0,0,0-.643-.643H23.785a.651.651,0,0,0-.642.643V9a.652.652,0,0,0,.643.643h1.286A.652.652,0,0,0,25.715,9Zm7.714-1.286V33.428A2.606,2.606,0,0,1,30.857,36H2.571a2.471,2.471,0,0,1-1.808-.763A2.471,2.471,0,0,1,0,33.428V7.714A2.471,2.471,0,0,1,.763,5.906a2.471,2.471,0,0,1,1.808-.763H5.142V3.214A3.1,3.1,0,0,1,6.086.944,3.1,3.1,0,0,1,8.357,0H9.643a3.1,3.1,0,0,1,2.27.944,3.1,3.1,0,0,1,.944,2.27V5.143h7.714V3.214a3.1,3.1,0,0,1,.944-2.27A3.1,3.1,0,0,1,23.785,0h1.286a3.1,3.1,0,0,1,2.27.944,3.1,3.1,0,0,1,.944,2.27V5.143h2.571a2.471,2.471,0,0,1,1.808.763,2.471,2.471,0,0,1,.763,1.808Z"/></svg></b>
                     <p class="date-info">Choose Service date...</p>
                 </div>
                 <div class="info">
+                    <b><svg xmlns="http://www.w3.org/2000/svg" width="28.393" height="28.63" viewBox="0 0 28.393 28.63"><defs><style>.a{fill:#c4c4c4;}</style></defs><path class="a" d="M14.2,0A14.231,14.231,0,0,0,.272,11.519H4.213A10.38,10.38,0,0,1,14.2,3.859a10.271,10.271,0,0,1,7.327,3.068l-4.554,4.592H28.393V0L24.234,4.193A14.089,14.089,0,0,0,14.2,0ZM0,17.111V28.63l4.159-4.193A14.089,14.089,0,0,0,14.2,28.63,14.231,14.231,0,0,0,28.121,17.111H24.18a10.38,10.38,0,0,1-9.983,7.66A10.271,10.271,0,0,1,6.869,21.7l4.554-4.592Z"/></svg></b>
                     <p class="how-often-option">One Time</p>
                 </div>
 
