feat: add fetch api and endpoint

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/1.0.10/datepicker.min.css" integrity="sha512-YdYyWQf8AS4WSB0WWdc3FbQ3Ypdm0QCWD2k4hgfqbQbRCJBEgX0iAegkl2S1Evma5ImaVXLBeUkIlP6hQ1eYKQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.14.0/jquery.timepicker.css" integrity="sha512-WlaNl0+Upj44uL9cq9cgIWSobsjEOD1H7GK1Ny1gmwl43sO0QAUxVpvX2x+5iQz/C60J3+bM7V07aC/CNWt/Yw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Styles -->
+
     <link rel="stylesheet" href="style.css">
+
     <title>Booking</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
         <section>
             <Label>
                 <h2>CHOOSE SERVICE TYPE</h2>
-                <select class="service-type" name="service-type">
+                <select class="service-type" name="serviceType">
                     <option>Regular</option>
                     <option>Deep Clean</option>
                     <option>Move-Out/Move In</option>
@@ -167,7 +168,7 @@
             <p>Where would you like us to clean?</p>
             <div class="address">
                 <input type="text" name="address" placeholder="Address*"/>
-                <input type="text" name="apt/suite" placeholder="Apt/Suite #">
+                <input type="text" name="aptSuite" placeholder="Apt/Suite #">
                 <input type="text" name="city" placeholder="City*">
                 <select name="state" placeholder="State*">
                     <option>AK</option>
@@ -251,6 +252,7 @@
             <button class="booking-submit">BOOK NOW</button>
         </div>
     </form>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/1.0.10/datepicker.min.js" integrity="sha512-RCgrAvvoLpP7KVgTkTctrUdv7C6t7Un3p1iaoPr1++3pybCyCsCZZN7QEHMZTcJTmcJ7jzexTO+eFpHk4OCFAg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
